# package-sets

./: README.md  current
package-set-tool/: CHANGELOG.md  package-set-tool.cabal
package-set-tool/app/: Main.hs
package-set-tool/src/: MyLib.hs
package-set-tool/src/PackageSetTool/: CommandCopy.hs  CommandListCoreLibraries.hs  CommandListReverseDependencies.hs  Package.hs  PackageSet.hs
src/el-0.14.5-20211116/: packages.dhall  psc-0.14.5-20211116-packages.dhall
src/el-0.14.5-20211116/overrides/: purescript-core-forked.dhall
