cabal-version:      2.4
name:               package-set-tool
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             t.shinohara
maintainer:         takenari.shinohara@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    PackageSetTool.CommandListReverseDependencies
    PackageSetTool.Package
    PackageSetTool.PackageSet

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base        ^>=4.14.3.0
    , containers
    , dhall
    , prettyprinter
    , rio

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost

executable pst
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base              ^>=4.14.3.0
    , optparse-generic
    , package-set-tool
    , rio

  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    ImportQualifiedPost
